--- a/src/static/css/common.css
+++ b/src/static/css/common.css
@@ -1,36 +1,14 @@
-body,
-html {
-  margin: 0;
-  padding: 0;
-  font-family: "Microsoft Yahei", Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  color: white;
-  height: 100%;
-  overflow-x: hidden;
-}
-body th,
-td,
-tr,
-input,
-div,
-h1,
-h2,
-h3,
-h4,
-h5,
-ul,
-li,
-a,
-img,
-dl,
-dt,
-dd,
-p {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-decoration: none;
-  border: none;
-  box-sizing: border-box;
-  color: white;
-}
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; box-sizing:border-box;}
+body, button, input, select, textarea { font:14px/1.5tahoma, arial, \5b8b\4f53; }
+address, cite, dfn, em, var { font-style:normal; }
+code, kbd, pre, samp { font-family:couriernew, courier, monospace; }
+small{ font-size:12px; }
+ul, ol { list-style:none; }
+a { text-decoration:none;color:#fff; }
+a:hover { text-decoration:none; }
+sup { vertical-align:text-top; }
+sub{ vertical-align:text-bottom; }
+legend { color:#000; }
+fieldset, img { border:0; }
+button, input, select, textarea { font-size:100%; }
+table { border-collapse:collapse; border-spacing:0; }
